[package]
name = "yiff"
version = "0.1.0"
authors = ["Dawid J. Kubis <dawidkubis@hitler.rocks>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.12"
anyhow = "1.0.28"
rocket = "0.4.4"
rocket_contrib = "0.4.4"
